--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_WEB3FORMS_ACCESS_KEY=d5a2ce54-b1a3-4493-a43a-72b7405bc2c7
 VITE_WEB3FORMS_API=https://api.web3forms.com/submit
+RESEND_API_KEY=live_pk_1234567890abcdef
